# git-diff-review-tool

./: eslint.config.js  package-lock.json  package.json  progress.md  ralph-once.sh  ralph.sh  vite.config.ts
docs/: requirements.md  technical-design.md
docs/mockups/: main-ui.html
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: BranchPicker.tsx  DiffModeSelector.tsx  FileTree.tsx  RepoList.tsx  UnifiedDiffView.tsx
src/lib/: diffParser.ts
src/store/: diffSlice.ts  index.ts  reposSlice.test.ts  reposSlice.ts
src/types/: diff.ts
