[package]
name = "review-tool"
version = "0.1.0"
description = "Git diff review tool for annotating AI-generated changes"
authors = ["Krelborn"]
edition = "2021"

[lib]
name = "review_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
